feat: add get suspended quizzes